--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.12.0",
     "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "sass": "^1.69.5",
     "sweetalert2": "^11.10.0",
     "web-vitals": "^2.1.4"
   },
