--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "react-js-pagination": "^3.0.3",
