--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.2",
     "cdbreact": "^1.5.18",
     "countries-list": "^3.0.6",
+    "mdb-react-ui-kit": "^7.0.0",
     "mdbreact": "^5.2.0",
     "rc-slider": "^10.4.0",
     "react": "^18.2.0",
