--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -7,6 +7,9 @@ JWT_SECRET = gWlkpvmeYqas79948OiH
 JWT_EXPIRES_TIME =7d
 COOKIE_EXPIRES_TIME = 7
 
+FACEBOOK_APP_ID= 3675250786095175
+FACEBOOK_APP_SECRET= d583da5fb19a2b17f6168baa0bf2f112
+
 CLOUDINARY_CLOUD_NAME = derfqtme4
 CLOUDINARY_API_KEY = 737852945415314
 CLOUDINARY_API_SECRET = jw3ByVAkZJstX7pD-Xemrv9Inx8
