--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "cdbreact": "^1.5.18",
     "countries-list": "^3.0.6",
     "express-session": "^1.17.3",
+    "firebase": "^10.6.0",
+    "gapi-script": "^1.2.0",
+    "google": "^2.1.0",
     "mdb-react-ui-kit": "^7.0.0",
     "mdbreact": "^5.2.0",
     "passport": "^0.6.0",
