--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "reactjs-social-login": "^2.6.3",
+    "recharts": "^2.10.1",
     "sass": "^1.69.5",
     "sweetalert2": "^11.10.0",
     "web-vitals": "^2.1.4"
