--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -18,5 +18,5 @@ SMTP_HOST = sandbox.smtp.mailtrap.io
 SMTP_PORT = 2525
 SMTP_EMAIL = 7ce159d25c86b2
 SMTP_PASSWORD = 04ae22202267a6
-SMTP_FROM_EMAIL = noreply@gmail.com
-SMTP_FROM_NAME = admin
+SMTP_FROM_EMAIL = photocardshop@gmail.com
+SMTP_FROM_NAME = PhotocardShop
